--- a/babny/src/styles.css
+++ b/babny/src/styles.css
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    padding-top: 30px;
+    position: relative;
+    font-family: 'Open Sans', sans-serif; 
 }
 
 
